--- a/styles.css
+++ b/styles.css
@@ -1,94 +1,37 @@
-/* body {
+body {
   overflow: hidden;
   margin: 0;
   transition: background 0.2s linear;
 }
 body.dark {
   background-color: #292c35;
-} */
-
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
-
-:root {
-  --surface: #fff;
-  --bg: #e4e4e7;
-  --text: #71717a;
-  --shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
-  --inset: inset 0 0.125rem 0.25rem 0 rgba(0, 0, 0, 0.15);
 }
 
-.dark-theme {
-  --surface: #27272a;
-  --bg: #18181b;
-  --text: #a1a1aa;
-  --shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.3);
-  --shadow-inner: inset 0 0.125rem 0.25rem 0 rgba(0, 0, 0, 0.6);
+.btn {
+  margin: 10px;
+  background-color: aqua;
+  border-radius: 10px;
 }
 
-body {
-  margin: 0;
-  overflow: hidden;
-  background-color: var(--surface);
-  transition: background-color 0.15s ease-in 0.4s;
-}
-
-.toggle {
-  display: inline-flex;
+.button-grp {
+  padding: 10px;
+  width: 100%;
+  position: absolute;
+  display: flex;
   align-items: center;
-  justify-content: space-around;
-  margin: auto;
-  position: relative;
-  height: 25px;
-  width: 150px;
+  justify-content: center;
 }
 
-.toggle input {
-  position: absolute;
-  height: 0;
-  width: 0;
-  opacity: 0;
-}
-
-.switch {
-  position: absolute;
-  top: 0;
-  right: 0;
+.link-grp {
   bottom: 0;
-  left: 0;
-  background-color: var(--bg);
-  box-shadow: var(--inset);
-  border-radius: 25px;
-  transition: background-color 0.15s ease-in 0.4s, box-shadow 0.15s ease-in 0.4s;
-  user-select: none;
-  cursor: pointer;
-}
-
-.switch:before {
+  padding: 10px;
+  width: 100%;
   position: absolute;
-  content: "";
-  height: 20px;
-  width: 72.5px;
-  top: 2.5px;
-  left: 2.5px;
-  background-color: var(--surface);
-  box-shadow: var(--shadow);
-  border-radius: 40px;
-  transition: transform 0.3s, background-color 0.15s ease-in 0.4s,
-    box-shadow 0.15s ease-in 0.4s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-input:checked + .switch:before {
-  transform: translateX(72.5px);
-}
-
-.toggle p {
-  font-family: "Montserrat", sans-serif;
-  color: var(--text);
-  transition: color 0.15s ease-in 0.4s;
-  cursor: pointer;
-  z-index: 1;
-}
-
-.canvas {
+/* .canvas {
   position: relative;
-}
+} */
